[package]
name = "@dyy/grrs"
version = "0.1.0"
authors = ["gtfx0209@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/go7hic/grrs"
repository = "https://github.com/go7hic/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
